--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,7 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
@@ -300,14 +300,77 @@ jobs:
             echo "env-name=staging" >> $GITHUB_OUTPUT
           fi
 
-      - name: Check Lambda function exists
+      - name: Check or Create Lambda function
+        id: check-lambda
         run: |
-          if ! aws lambda get-function --function-name "${{ steps.lambda-name.outputs.function-name }}" 2>/dev/null; then
-            echo "⚠️  Lambda function does not exist yet"
-            echo "Please create it manually in AWS console or via Terraform"
-            exit 1
+          FUNCTION_NAME="${{ steps.lambda-name.outputs.function-name }}"
+          
+          if aws lambda get-function --function-name "$FUNCTION_NAME" 2>/dev/null; then
+            echo "✅ Lambda function found"
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "⚠️  Lambda function does not exist. Creating..."
+            
+            # Create execution role if it doesn't exist
+            ROLE_NAME="ChainOrchestrator-Lambda-ExecutionRole"
+            
+            if ! aws iam get-role --role-name "$ROLE_NAME" 2>/dev/null; then
+              echo "Creating IAM role..."
+              
+              cat > trust-policy.json <<EOF
+          {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Service": "lambda.amazonaws.com"
+                },
+                "Action": "sts:AssumeRole"
+              }
+            ]
+          }
+          EOF
+              
+              aws iam create-role \
+                --role-name "$ROLE_NAME" \
+                --assume-role-policy-document file://trust-policy.json
+              
+              # Attach basic Lambda execution policy
+              aws iam attach-role-policy \
+                --role-name "$ROLE_NAME" \
+                --policy-arn arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+              
+              # Wait for role to be available
+              sleep 10
+            fi
+            
+            ROLE_ARN=$(aws iam get-role --role-name "$ROLE_NAME" --query 'Role.Arn' --output text)
+            
+            # Create placeholder zip
+            echo '#!/bin/sh' > bootstrap
+            echo 'echo "Placeholder"' >> bootstrap
+            chmod +x bootstrap
+            zip placeholder.zip bootstrap
+            
+            # Create Lambda function
+            aws lambda create-function \
+              --function-name "$FUNCTION_NAME" \
+              --runtime provided.al2023 \
+              --role "$ROLE_ARN" \
+              --architectures arm64 \
+              --handler bootstrap \
+              --zip-file fileb://placeholder.zip \
+              --timeout 60 \
+              --memory-size 512 \
+              --description "ChainOrchestrator Lambda - ${{ steps.lambda-name.outputs.env-name }}"
+            
+            echo "✅ Lambda function created"
+            echo "exists=false" >> $GITHUB_OUTPUT
+            
+            # Wait for function to be active
+            aws lambda wait function-active --function-name "$FUNCTION_NAME"
           fi
-          echo "✅ Lambda function found"
 
       - name: Zip Lambda binary
         run: |
